--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">M2024B</string>
+    <string name="key_price">Price</string>
+    <string name="key_tip">Tip %</string>
+    <string name="key_tax" translatable="false">Tax</string>
 </resources>
